<resources>
    <string name="app_name">Anime Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anime Tracker</string>
    <string name="nav_header_subtitle">What\'s Anime?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading_title_message">Woops.  We couldn\'t load your animes.  Check your internet connection and try again.</string>
    <string name="anime_list_message">Anime List</string>
    <string name="add_to_list_button_text">Add to your list</string>
    <string name="add_to_score_button_text">\+1 Score</string>
    <string name="dec_to_score_button_text">\-1 Score</string>
    <string name="add_to_watched_button_text">\+1 Episodes Watched</string>
    <string name="dec_to_watched_button_text">\-1 Episodes Watched</string>
    <string name="go_to_kit_button_text">View on Kitsu</string>
    <string name="go_to_youtube_button_text">View Trailer on Youtube</string>


    <string name="menu_home">Anime List</string>
    <string name="menu_gallery">Title Search</string>
    <string name="menu_slideshow">Genre Search</string>
    <string name="menu_tools">Export Anime List</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="search_box_hint">Search Title...</string>
    <string name="search_title_button_text">Search</string>
    <string name="loading_title_error">Ooops, couldn\'t load title search</string>

    <string name="genre_box_hint">Search Genre...</string>
    <string name="search_genre_button_text">Search</string>
    <string name="loading_genre_error">Ooops, couldn\'t load genre search</string>

    <string name="load_more_button_text">Load more</string>


    <string name="anime_title">Title: %1$s</string>
    <string name="no_anime_title">No Title</string>
    <string name="anime_avg_rating">Average Rating: %1$s</string>
    <string name="anime_popular_rank">Popularity Rank: %1$s</string>
    <string name="anime_show_type">Show Type: %1$s</string>
    <string name="anime_status">Current Status: %1$s</string>
    <string name="anime_episode_count">Episode Count: %1$s</string>
    <string name="anime_episode_length">Episode Length: %1$s</string>
    <string name="anime_youtube_id">YoutubeID: %1$s</string>
    <string name="anime_synopsis">Synopsis: \n %1$s</string>
    <string name="anime_score">Current Score: %1$s</string>
    <string name="anime_watched">Current Episodes Watched: %1$s</string>
  
    <string name="export_anime_list">Export Anime List JSON</string>

</resources>
