<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_title_search_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:hint="@string/search_box_hint"/>

        <Button
            android:id="@+id/btn_title_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_title_button_text"
            android:textSize="22sp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_anime_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_title_error_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:padding="16dp"
                android:visibility="invisible"
                android:text="@string/loading_title_error"/>

            <ProgressBar
                android:id="@+id/pb_loading_title_indicator"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="32dp"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/btn_title_load_more"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/load_more_button_text"
                android:textSize="22sp"
                android:visibility="invisible"/>
        </FrameLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>